# Server-Status

./: .gitignore  .gitmodules  CMakeLists.txt  Console.py  Hard Drives.json  PCIe Cards.json  README.md  Setup.py  Status.py  __init__.ps1  __init__.py  __main__.py  __mod__.psm1  console.py  install.py  module.yaml  options.yaml  run.bat  run.ps1  run.vbs  status.ps1
Interval/: Day.py  Hour.py  Startup.py  Week.py  __init__.py
Items/: HardDrive.py  Hard_Drives.py  Module.py  Modules.py  Mounts.py  PCIeCard.py  PCIe_Cards.py  Service.py  Services.py  Tower.py  Towers.py  Types.py  VirtualDisk.py  Virtual_Disks.py  __init__.py
Items/LT1/: HardDrives.py  Modules.py  Towers.py
Items/PC1/: FWPorts.py  HardDrives.py  Modules.py  Mounts.py  PCIeCards.py  Services.py  Towers.py  VirtualDisks.py
Items/PC2/: HardDrives.py  Modules.py  PCIeCards.py  Services.py  Towers.py  VirtualDisks.py
Items/PC5/: HardDrives.py  Modules.py  Mounts.py  Towers.py
Services/CPU_Balancer/: Running.ps1  Start.vbs  Stop.ps1  __main__.py
Utils/: Console.py  Setup.py  Status.py  Update.py  __init__.py
Utils/Console/: Commands.py  Types.py  __main__.py
config/: Hard Drives.yaml  PCIe Cards.yaml  Services.yaml  commands.json  commands.yaml  modules.yaml  options.yaml  vDisks.yaml
exec/: Day.py  Hour.py  Week.py  __init__.py  abort.vbs  alert.vbs  backup.ffs_batch  backup.py  install.py  startup.py  status.py
exec/items/: Hard_Drives.py  PCIe_Cards.py  Towers.py  (+3 more)
items/: pyproject.toml
src/: main.cpp  types.h
vbs/: abort.vbs  run.vbs
xml/: Hour.xml  Set.bat  Startup.xml  Week.xml
(+20 files in other folders)
